--- a/debugger/index.html
+++ b/debugger/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebRender Debugger</title>
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <script src="js/vue.min.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="js/app.js"></script>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>WebRender Debugger</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script src="dist/build.js"></script>
+    </body>
 </html>
